fix: overflow issue in hero

--- a/src/views/certifications/components/certifications-hero/certifications-hero.module.css
+++ b/src/views/certifications/components/certifications-hero/certifications-hero.module.css
@@ -2,6 +2,9 @@
  * Base spacing 
  */
 .root {
+	/* background and image elements may "bleed", prevent this from turning
+	   into viewport overflow */
+	overflow: hidden;
 	padding-bottom: 220px;
 	padding-top: 144px;
 
